package com.example.producttool.domain;

public enum DataType {
	STRING,
	NUMBER,
	BOOLEAN,
	DATE
} 